# Training-Rigor

./: .pre-commit-config.yaml  404.html  AI-Whitepaper-Evaluating Training Rigor Across Learner Levels.docx  LICENSE  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  requirements-mkdocs.txt  sitemap.xml  tags.json
.github/workflows/: docs.yml
2025/12/03/training-rigor/: index.html
archive/2025/: index.html
docs/: .authors.yml  index.md
docs/posts/: .meta.yml
docs/posts/251203_Rigor_Intro/: rigor_intro.md
includes/: abbreviations.md
overrides/partials/: comments.html
scripts/: update_tooling.bat  update_tooling.sh  uv_export_to_req_txt.bat  uv_export_to_req_txt.sh
search/: search_index.json
tags/: index.html
