[project]
name = "training-rigor"
version = "0.1.1"
description = "An introduction to measuring and improving rigor when setting learning outcomes for training and education"
authors = [
    {name = "Brent Stone"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.14"
dependencies = [
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.0",
    "mkdocs-rss-plugin>=1.17.7",
    "mkdocs-video>=1.5.0",
]
[project.urls]
Repository = "https://github.com/brent-stone/Training-Rigor/"
Homepage = "https://brent-stone.github.io/Training-Rigor/"
Documentation = "https://brent-stone.github.io/Training-Rigor/"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
